test/fail/integration/_fail_grammar_if_block_func_2.hs
x :: Int
x = if True then jl else 4
main = print "hello"